--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
 .top-controls {
     display: flex;
     gap: 1rem;
-    align-items: center;
+    align-items: flex-end;
 }
 .search-container { 
     flex-grow: 1; 
@@ -552,3 +552,4 @@ hr {
 .secret-letter:hover {
     text-decoration: underline dotted var(--primary-color);
 }
+
